<resources>
    <string name="app_name">volleyproject</string>
    <string name="RECORD">紀錄比賽</string>
    <string name="DATA">資料回顧</string>
    <string name="BAG">球員背包</string>
    <string name="SHOP">付費功能</string>
    <string name="得分">得分</string>
    <string name="失分">失分</string>
    <string name="失誤得分">失誤得分</string>
    <string name="成功">成功</string>
    <string name="失誤">失誤</string>
    <string name="犯規">犯規</string>
    <string name="發球">發球</string>
    <string name="接球">接球</string>
    <string name="舉球">舉球</string>
    <string name="處理">處理</string>
    <string name="吊球">吊球</string>
    <string name="扣球">扣球</string>
    <string name="攔網">攔網</string>
    <string name="其他">其他</string>
    <string name="先發1">先發一</string>
    <string name="先發2">先發二</string>
    <string name="先發3">先發三</string>
    <string name="先發4">先發四</string>
    <string name="先發5">先發五</string>
    <string name="先發6">先發六</string>
    <string name= "二傳">二傳</string>
    <string name="候補1">候補一</string>
    <string name="候補2">候補二</string>
    <string name="輸入比賽資料">輸入比賽資料</string>
    <string name="日期">日期</string>
    <string name="對手">對手</string>
    <string name="場次">場次</string>
    <string name="下一步">下一步</string>
    <string name="recordbutton1">比賽過程</string>
    <string name="recordbutton2">擊球落點</string>
    <string name="choosetext">選擇記錄形式</string>
    <string name="volleymain">VOLLEYMAIN</string>
    <string name="exit">離開比賽</string>
    <string name="feature1">球路落點分析</string>
    <string name="feature2">球員數據整理</string>
    <string name="feature3">球員背包增加圖片</string>
    <string name="choose">點選欲回顧場次</string>
    <string name="chooseform">選擇回顧方式</string>
    <string name="analysis">團隊數據整理</string>
    <string name="process">比賽紀錄過程</string>
    <string name="result">該場次數據</string>
    <string name="result2">該場次過程</string>
    <string name="backtoanother">回顧其他場次</string>
    <string name="backtofirstpage">回首頁</string>
    <string name="data1">發球失誤率</string>
    <string name="data2">接球失誤率</string>
    <string name="data3">舉球被幫比率</string>
    <string name="data4">吊球得分率</string>
    <string name="data5">扣球得分率</string>
    <string name="data6">犯規次數</string>
    <string name="sign">登入</string>
    <string name="mail">信箱</string>
    <string name="password">密碼</string>
    <string name="signin">進入</string>
    <string name="firstuse">第一次使用嗎?</string>
    <string name="register">註冊</string>
    <string name="information">輸入基本資料</string>
    <string name="name">姓名</string>
    <string name="confirm">密碼確認</string>
    <string name="輸入球員姓名">輸入球員姓名</string>
    <string name="輸入球員號碼">輸入球員號碼</string>
    <string name="球員基本資訊">球員基本資訊</string>
    <string name="新增">新增</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plz_input_accout">請輸入信箱</string>
    <string name="plz_input_pw">請輸入密碼</string>
    <string name="register_success">註冊成功</string>
    <string name="login_success">登入成功</string>
</resources>
