<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF3E0"
        tools:layout_editor_absoluteX="731dp">

        <LinearLayout
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b17"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/得分"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b18"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/失分"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b19"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/失誤得分"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b20"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/成功"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b21"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/失誤"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b22"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:text="@string/無效"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/act"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b1"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/發球"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b2"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/接球"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b3"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/舉球"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b4"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/處理"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b5"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/吊球"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b6"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/扣球"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b7"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/攔網"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b8"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/其他"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b9"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/先發1"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b10"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/先發2"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b11"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/先發3"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b12"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/先發4"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b13"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/先發5"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b14"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/先發6"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/b15"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/候補1"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/b16"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/button_shape_behavior"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:text="@string/候補2"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>