<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0F7FA">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/information"
            android:textColor="#000000"
            android:textSize="40sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mail"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            app:errorEnabled="true"
            android:layout_gravity="center_horizontal">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mail_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_gravity="center_horizontal">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="460dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            android:layout_gravity="center_horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/next"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="580dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_shape_recordform"
            android:text="@string/signin"
            android:textSize="20sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>