<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.volleyproject.DataInput">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C8E6C9"
        android:duplicateParentState="false">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="70dp"
            android:text="@string/輸入比賽資料"
            android:textColor="@android:color/black"
            android:textSize="31sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_date"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/日期"
                    android:inputType="date"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_rival"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/對手"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_set"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/場次"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/next"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginTop="90dp"
                android:background="@drawable/button_shape_recordform"
                android:onClick="confirmInput"
                android:text="@string/下一步"
                android:textSize="20sp" />

        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
