<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseForm">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0F7FA">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/chooseform"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            android:textSize="40sp" />

        <Button
            android:id="@+id/analysis"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:text="@string/analysis"
            android:textSize="25sp"
            android:background="@drawable/button_shape_recordform"/>

        <Button
            android:id="@+id/process"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="400dp"
            android:text="@string/process"
            android:textSize="25sp"
            android:background="@drawable/button_shape_recordform"/>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>