<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B8D4"
    tools:context=".FirstPage">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0F7FA"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/volleyball"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="140dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/volleymain"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            android:textStyle="bold|italic" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_shape_recordform"
                android:text="@string/RECORD"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_shape_recordform"
                android:text="@string/DATA"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_shape_recordform"
                android:text="@string/BAG"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/button_shape_recordform"
                android:text="@string/SHOP"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>