<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.volleyproject.Process">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E0F7FA">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form2"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:text="@string/result2"
            android:textColor="#000000"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="600dp">

            <Button
                android:id="@+id/another"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/button_shape_recordform"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:text="@string/backtoanother"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/first"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/button_shape_recordform"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:text="@string/backtofirstpage"
                android:textSize="20sp"/>

        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
